--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <tr>
                     <td>1</td>
                     <td>
-                        <a href="/stack2/Bootstrap/bs-1.html">Task-1</a>
+                        <a href="/stack2/Bootstrap/bs - 1.html">Task-1</a>
                     </td>
                 </tr>
                 <tr>
