--- a/index.html
+++ b/index.html
@@ -58,29 +58,35 @@
                 <tr>
                     <td>2</td>
                     <td>
-                        <a href="/stack/html/task2.html">Task-2</a>
+                        <a href="/stack2/Bootstrap/bs - 2.html">Task-2</a>
                     </td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>
-                        <a href="/stack/html/task3.html">Task-3</a>
+                        <a href="/stack2/Bootstrap/bs - 3.html">Task-3</a>
                     </td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>
-                        <a href="/stack/html/task4.html">Task-4</a>
+                        <a href="/stack2/Bootstrap/bs - 4.html">Task-4</a>
                     </td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>
-                        <a href="/stack/html/task5.html">Task-5</a>
+                        <a href="/stack2/Bootstrap/bs - 5.html">Task-5</a>
+                    </td>
+                </tr>
+                 <tr>
+                    <td>6</td>
+                    <td>
+                        <a href="/stack2/Bootstrap/bs - 6.html">Task-5</a>
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2"><b>CSS Task</b></td>
+                    <td colspan="2"><b>Javascipt Task</b></td>
                 </tr>
                 <tr>
                     <td>1</td>
