--- a/index.html
+++ b/index.html
@@ -91,43 +91,49 @@
                 <tr>
                     <td>1</td>
                     <td>
-                        <a href="/stack/css/task1.html">Task-1</a>
+                        <a href="/stack2/Javascipt/js - 1.html">Task-1</a>
                     </td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>
-                        <a href="/stack/css/task2.html">Task-2</a>
+                        <a href="/stack2/Javascipt/js - 2.html">Task-2</a>
                     </td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>
-                        <a href="/stack/css/task3.html">Task-3</a>
+                        <a href="/stack2/Javascipt/js - 3.html">Task-3</a>
                     </td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>
-                        <a href="/stack/css/task4.html">Task-4</a>
+                        <a href="/stack2/Javascipt/js - 4.html">Task-4</a>
                     </td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>
-                        <a href="/stack/css/task5.html">Task-5</a>
+                        <a href="/stack2/Javascipt/js - 5.html">Task-5</a>
                     </td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>
-                        <a href="/stack/css/task6.html">Task-6</a>
+                        <a href="/stack2/Javascipt/js - 6.html">Task-6</a>
                     </td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>
-                        <a href="/stack/css/task7.html">Task-7</a>
+                        <a href="/stack2/Javascipt/js - 7.html">Task-7</a>
+                    </td>
+                </tr>
+                 <tr>
+                    <td>7</td>
+                    <td>
+                        <a href="/stack2/Javascipt/js - 8.html">Task-7</a>
                     </td>
                 </tr>
              </tbody>
