--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <tr>
                     <td>1</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 1.html">Task-1</a>
+                        <a href="/stack2/Javascript/js - 1.html">Task-1</a>
                     </td>
                 </tr>
                 <tr>
