--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2"><b>Javascipt Task</b></td>
+                    <td colspan="2"><b>Javascript Task</b></td>
                 </tr>
                 <tr>
                     <td>1</td>
                     <td>
-                        <a href="/stack2/Javascript/js- 1.html">Task-1</a>
+                        <a href="/stack2/Javascript/js - 1.html">Task-1</a>
                     </td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 2.html">Task-2</a>
+                        <a href="/stack2/Javascript/js - 2.html">Task-2</a>
                     </td>
                 </tr>
                 <tr>
