--- a/index.html
+++ b/index.html
@@ -103,37 +103,37 @@
                 <tr>
                     <td>3</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 3.html">Task-3</a>
+                        <a href="/stack2/Javascript/js - 3.html">Task-3</a>
                     </td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 4.html">Task-4</a>
+                        <a href="/stack2/Javascript/js - 4.html">Task-4</a>
                     </td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 5.html">Task-5</a>
+                        <a href="/stack2/Javascript/js - 5.html">Task-5</a>
                     </td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 6.html">Task-6</a>
+                        <a href="/stack2/Javascript/js - 6.html">Task-6</a>
                     </td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 7.html">Task-7</a>
+                        <a href="/stack2/Javascript/js - 7.html">Task-7</a>
                     </td>
                 </tr>
                  <tr>
-                    <td>7</td>
+                    <td>8</td>
                     <td>
-                        <a href="/stack2/Javascipt/js - 8.html">Task-7</a>
+                        <a href="/stack2/Javascript/js - 8.html">Task-7</a>
                     </td>
                 </tr>
              </tbody>
